# hpp-practicals

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  default.nix  flake.nix  package.xml
docker/: Dockerfile  README.md  config.sh
instructions/: corba.asciidoc  corba.html  exercise-1.asciidoc  exercise-1.html  exercise-2.asciidoc  exercise-2.html  exercise-3.html  preliminaries.tex
meshes/ur5/visual/: base.dae  base.osg  forearm.dae  forearm.osg  shoulder.dae  shoulder.osg  upperarm.dae  upperarm.osg  wrist1.dae  wrist1.osg  wrist2.dae  wrist2.osg  wrist3.dae  wrist3.osg
meshes/ur_benchmark/: pokeball.osg
script/: grasp_ball.py  grasp_ball_in_box.py  motion_planner.py  rrt.py  solve_by_hand.py
script/gtsp/: constraints.py  display.py  resolution.py  robot.py  script_hpp.py  tiago.urdf
script/gtsp/data/: roadmap  roadmap.small  tiago-small.txt  tiago.txt
script/ik/: ik.py  projection_helper.py  run.sh
script/manipulation/: __init__.py  common.py
slides/: class-1.tex  class-2.tex  manipulation.tex  non-linear-constraints.tex  random-methods.tex  script
slides/figures/: composite-robot.pdf_tex  connecting-trees-simple-grasp.pdf_tex  connecting-trees.pdf_tex  foliation-example.pdf_tex  foliation-path.pdf_tex  forward-kinematics.pdf_tex  kinematic-chain.pdf_tex  relative-pose.pdf_tex
src/hpp/corbaserver/practicals/manipulation/ur5/: robot.py
src/hpp/practicals/ur5/: robot.py
src/hpp_practicals/manipulation/ur5/: robot.py
srdf/: generate_part.py  part.srdf  part_small.srdf
update/: save.sh  update.sh
urdf/: part.urdf  part_small.urdf  ur5_gripper.urdf  ur5_joint_limited_robot.urdf
